framec_tests/language_specific/java/v3_mir/negative/native_after_terminal.frm
@target java

system S {
    machine:
        $A {
            e() {
                -> $B()
                int x = 1; // native after terminal
            }
        }
}

